# Computer_Vision_Pool_Table_Tracking

./: CMakeLists.txt  Points.txt
First_frames_detected_bboxes/: first_frame_detected_bboxes_01.txt  first_frame_detected_bboxes_02.txt  first_frame_detected_bboxes_03.txt  first_frame_detected_bboxes_04.txt  first_frame_detected_bboxes_05.txt  first_frame_detected_bboxes_06.txt  first_frame_detected_bboxes_07.txt  first_frame_detected_bboxes_08.txt  first_frame_detected_bboxes_09.txt  first_frame_detected_bboxes_10.txt
Last_frames_detected_bboxes/: last_frame_detected_bboxes_01.txt  last_frame_detected_bboxes_02.txt  last_frame_detected_bboxes_03.txt  last_frame_detected_bboxes_04.txt  last_frame_detected_bboxes_05.txt  last_frame_detected_bboxes_06.txt  last_frame_detected_bboxes_07.txt  last_frame_detected_bboxes_08.txt  last_frame_detected_bboxes_09.txt  last_frame_detected_bboxes_10.txt
Table_vertices/: vertices_table_01.txt  vertices_table_02.txt  vertices_table_05.txt  vertices_table_07.txt  vertices_table_08.txt  vertices_table_10.txt
Table_vertices_for_tracking/: vertices_table_03.txt  vertices_table_05.txt  vertices_table_07.txt  vertices_table_08.txt  vertices_table_10.txt
include/: Balls_segmentation.h  Classes.h  Field_detection.h  Metrics.h  Utilities.h  ball_classification.h  main.h  table_orientation.h  tracking.h
src/: Balls_segmentation.cpp  Classes.cpp  Field_detection.cpp  Main_Field_Balls.cpp  Main_metrics.cpp  Metrics.cpp  Utilities.cpp  ball_classification.cpp  main.cpp  main_tracking.cpp  table_orientation.cpp  tracking.cpp
